# ai-thinking-partner-evals-framework

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
core/: aggregator.py  config.py  eval_engine.py  feedback.py  golden.py  insights.py  judge.py  mcp_checks.py  pipeline_checks.py  regression.py  reporter.py  retro_eval.py
plugin/: package.json
plugin/.claude-plugin/: plugin.json
plugin/commands/eval/: calibrate.md  check.md  improve.md  pipeline.md  rate.md  regression.md  report.md  run.md
plugin/hooks/: hooks.json  post-commit-eval.sh  post-write-eval.sh
plugin/rubrics/: code-technical.rubric.md  data-analysis.rubric.md  open-reasoning.rubric.md  search-retrieval.rubric.md  structured-doc.rubric.md
plugin/skills/eval-feedback/: SKILL.md
plugin/skills/eval-judge/: SKILL.md
plugin/skills/eval-reporter/: SKILL.md
plugin/skills/eval-runner/: SKILL.md
